# telegram-rutor-bot

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.single  Pipfile  README.md  alembic.ini  config.toml.example  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.single.yml  docker-compose.yml  helpers.py  main.py  models.py  pyproject.toml  run_single.sh  setting.py.example  telegram-rutor-bot.code-workspace
.agents/workflows/: db-create-migration.md  db-migrate.md  full-dev.md
.github/workflows/: ci.yml  docker-publish.yml  lint.yml  pipeline.yml  release.yml  trufflehog.yml
alembic/: env.py
alembic/versions/: 0a1d91ecaeb8_add_original_title_to_films.py  116051d30fa5_add_is_series_to_searches.py  117abfc83473_initial_migration.py  6b81e83b7dd3_add_watchlist_fields_to_film.py  752244946b3c_add_kp_rating.py  920906cdff50_add_season_and_episode_to_torrents.py  9de4f0e20117_add_notified_flag_to_film.py  a2f87a7c001a_add_per_search_quality_and_translation_.py  b3f4a1c2d5e7_add_notified_episodes_table.py  c4a8f0d2e7b1_add_torrent_sort_keywords.py  d8e9f3a1b2c4_add_discovery_max_results_to_config.py  e70d87ec09f0_initial_squashed.py
contrib/: entrypoint.sh
db/: __init__.py  connections.py  db.py  films.py  helpers.py  searches.py  subscriptions.py  torrents.py  users.py
db/schemas/: schema.sql
deploy/: Dockerfile  config.toml.example  docker-compose.yml
deploy/single-container/: Dockerfile  start.sh
docker/qbittorrent/: Dockerfile  plex_rename.sh  setup.sh
docs/: api.md  configuration.md  deployment.md  installation.md  single-container.md  torrent-clients.md
frontend/: eslint.config.js  index.html  lint_output.txt  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: wizard.html
frontend/src/: App.tsx  api.ts  i18n.ts  main.tsx  router.tsx  types.ts
frontend/src/components/: LanguageSwitcher.tsx
frontend/src/components/shared/: CronScheduler.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Checkbox.tsx  Input.tsx  Modal.tsx  Select.tsx  Tooltip.tsx
frontend/src/hooks/: useDebounce.ts
frontend/src/locales/: en.json  ru.json
frontend/src/pages/: Discovery.tsx  Downloads.tsx  Home.tsx  Library.tsx  Login.tsx  Searches.tsx  SettingsCategory.tsx  SettingsConfig.tsx  SettingsSearches.tsx  SettingsUsers.tsx  Tasks.tsx
handlers/: __init__.py  commons.py  search.py  subscribe.py  torrents.py
locales/: en.json  ru.json
rutor/: parser.py
schedulers/: jobs.py
scripts/: run_single.sh  run_tests.sh
src/: MARKER.txt
src/telegram_rutor_bot/: config.py  config_listener.py  helpers.py  main.py  recommendations.py  schemas.py
src/telegram_rutor_bot/api/routes/: config.py  discovery.py
src/telegram_rutor_bot/clients/: tmdb.py
src/telegram_rutor_bot/db/: __init__.py  config_ops.py  database.py  episodes.py  films.py  migrate.py  models.py  searches.py  subscriptions.py  torrents.py  users.py
src/telegram_rutor_bot/handlers/: __init__.py  commons.py  discovery.py  pending.py  search.py  subscribe.py  torrents.py  watchlist.py
src/telegram_rutor_bot/rutor/: __init__.py  constants.py  debug_parser.py  formatter.py  parser.py  rating_parser.py
src/telegram_rutor_bot/services/: matcher.py  monitor.py  search_manager.py  watchlist.py
src/telegram_rutor_bot/tasks/: broker.py  jobs.py
src/telegram_rutor_bot/torrent_clients/: __init__.py  base.py  factory.py  qbittorrent.py  transmission.py
src/telegram_rutor_bot/utils/: __init__.py  cache.py  category_mapper.py  country_mapper.py  cron.py  episode_filter.py  episode_parser.py  i18n.py  markdown.py  security.py  telegram.py
src/telegram_rutor_bot/web/: app.py  auth.py  config_api.py
tests/: __init__.py  conftest.py  conftest_addons.py
tests/integration/: test_discovery_library.py  test_parser_debug.py  test_parser_integration.py  test_parser_real.py
tests/unit/: test_api_discovery.py  test_api_discovery_new.py  test_app_comprehensive.py  test_app_extra_final.py  test_app_final.py  test_app_gets.py  test_app_simple_final.py  test_auth_comprehensive.py  test_auth_final.py  test_auth_more.py  test_broker_full.py  test_cache.py  test_cache_final.py  test_category_mapper.py  test_category_mapper_final.py  test_commons.py  test_config_api.py  test_config_api_extended.py  test_config_api_final.py  test_config_api_internals.py  test_config_listener_full.py  test_country_mapper.py  test_cron.py  test_database_full.py  test_db_config_ops_final.py  test_db_database_final.py  test_db_films_final.py  test_db_films_more.py  test_db_operations.py  test_db_searches_final.py  test_db_searches_new.py  test_db_subscriptions.py  test_db_torrents_final.py  test_db_torrents_new.py  test_db_users_final.py  test_db_users_new.py  test_discovery_api.py  test_discovery_api_full.py  test_episode_parser.py  test_formatter.py  (+58 more)
utils/: security.py
