[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-rutor-bot"
version = "1.0.1"
description = "Telegram bot for monitoring rutor.info torrents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot[socks]",
    "httpx[socks]>=0.27.0",
    "beautifulsoup4",
    "lxml",
    "sqlalchemy>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "toml>=0.10.2",
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.7",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "croniter>=6.0.0",
]

[project.scripts]
telegram-rutor-bot = "telegram_rutor_bot.main:main"

[dependency-groups]
dev = [
    # Code quality tools
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pylint>=3.3.1",
    "pre-commit>=3.8.0",
    # Type stubs
    "types-requests>=2.32.0",
    "types-beautifulsoup4>=4.12.0",
    "types-toml>=0.10.8",
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.2.0",
    "factory-boy>=3.2.0",
    "faker>=18.0.0",
    "types-python-jose>=3.5.0.20250531",
    "types-passlib>=1.7.7.20250602",
    "types-croniter>=6.0.0.20250809",
]

[tool.ruff]
exclude = [
    "var",
    "alembic",
    ".git",
    "__pycache__",
    ".venv",
]
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PL", # Pylint
    "RUF", # Ruff-specific rules
    "ANN401", # Any-type
]
ignore = [
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "E501", # Line too long (handled by formatter)
    "RUF001", # String contains ambiguous characters (Cyrillic)
    "B008", # Do not perform function call in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["telegram_rutor_bot"]

[tool.ruff.lint.per-file-ignores]
# Migrations can have longer lines and print statements
"alembic/versions/*.py" = ["E501", "T201"]
# Tests can use magic values and print statements
"tests/**/*.py" = ["PLR2004", "T201"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
exclude = ["tests", "alembic"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# Ignore missing imports for third-party packages
[[tool.mypy.overrides]]
module = [
    "transmission_rpc.*",
    "bs4.*",
    "taskiq.*",
    "taskiq_redis.*",
    "telegram.*",
    "telegram.ext.*",
]
ignore_missing_imports = true

[tool.pylint.MASTER]
load-plugins = []
ignore = [".git", "__pycache__", ".venv", "alembic", "var"]
ignore-patterns = ["test_.*\\.py", "conftest\\.py"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "duplicate-code",
    "line-too-long",
    "too-many-positional-arguments",
    "wrong-import-order",
    "wrong-import-position",
    "ungrouped-imports",
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.BASIC]
good-names = ["i", "j", "k", "ex", "fp", "id", "_", "db", "dt"]

[tool.pylint.DESIGN]
max-args = 7
max-locals = 15
max-branches = 12
max-statements = 50

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/telegram_rutor_bot",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "external: Tests requiring external services",
]

[tool.coverage.run]
source = ["src/telegram_rutor_bot"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
